<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:ignore="NestedWeights">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_a"
            style="@android:style/Widget.Material.Light.Button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/a"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btn_b"
            style="@android:style/Widget.Material.Light.Button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/b"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btn_c"
            style="@android:style/Widget.Material.Light.Button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/c"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btn_d"
            style="@android:style/Widget.Material.Light.Button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/d"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btn_f"
            style="@android:style/Widget.Material.Light.Button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/f"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btn_g"
            style="@android:style/Widget.Material.Light.Button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/g"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_h"
            style="@android:style/Widget.Material.Light.Button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/h"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btn_i"
            style="@android:style/Widget.Material.Light.Button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/i"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btn_j"
            style="@android:style/Widget.Material.Light.Button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/j"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btn_k"
            style="@android:style/Widget.Material.Light.Button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/k"
            android:textSize="18sp" />

        <Button
            android:id="@+id/l"
            style="@android:style/Widget.Material.Light.Button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/l"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btn_m"
            style="@android:style/Widget.Material.Light.Button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/m"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_n"
            style="@android:style/Widget.Material.Light.Button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/n"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btn_p"
            style="@android:style/Widget.Material.Light.Button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/p"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btn_q"
            style="@android:style/Widget.Material.Light.Button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/q"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btn_r"
            style="@android:style/Widget.Material.Light.Button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/r"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btn_s"
            style="@android:style/Widget.Material.Light.Button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/s"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btn_t"
            style="@android:style/Widget.Material.Light.Button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/t"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_u"
            style="@android:style/Widget.Material.Light.Button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/u"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btn_v"
            style="@android:style/Widget.Material.Light.Button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/v"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btn_w"
            style="@android:style/Widget.Material.Light.Button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/w"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btn_x"
            style="@android:style/Widget.Material.Light.Button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/x"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btn_y"
            style="@android:style/Widget.Material.Light.Button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/y"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btn_z"
            style="@android:style/Widget.Material.Light.Button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/z"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/alpha"
            style="@android:style/Widget.Material.Light.Button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/alpha"
            android:textSize="18sp" />

        <Button
            android:id="@+id/beta"
            style="@android:style/Widget.Material.Light.Button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/beta"
            android:textSize="18sp" />

        <Button
            android:id="@+id/gamma"
            style="@android:style/Widget.Material.Light.Button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/gamma"
            android:textSize="18sp" />

        <Button
            android:id="@+id/delta"
            style="@android:style/Widget.Material.Light.Button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/delta"
            android:textSize="18sp" />

        <Button
            android:id="@+id/equals"
            style="@android:style/Widget.Material.Light.Button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/equals"
            android:textSize="18sp" />
    </LinearLayout>
</LinearLayout>