...
    <string name="z">z</string>
    <string name="tab_basic">Main</string>
    <string name="tab_scientific">Func</string>
    <string name="tab_history">History</string>
    <string name="tab_graph">Graph</string>
    <string name="tab_preferences">⚙</string>
    <string name="tab_function">abc</string>
    <string name="sin">sin</string>
    <string name="cos">cos</string>
    <string name="tan">tan</string>
    <string name="squared_display">x²</string>
    <string name="squared">²</string>
    <string name="natural_log">ln</string>
...
